--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-modern-drawer": "^1.2.2",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.18.0",
